--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,8 @@ body {
 }
 
 #main-content {
-    margin-top: 20px;
+    margin-top: 100px;
+    margin-bottom: 100px;
 }
 
 /* Styles for the nav-bar */
